# shellhome-hstrip

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild  ble_m3.c  ble_m3.h  esp_hid_gap.c  esp_hid_gap.h  hstrip_main.c  main.c  node_status.c  node_status.h  sh_led_strip.c  sh_led_strip.h
